nicer line breaks

--- a/views/courses/components/topics.hbs
+++ b/views/courses/components/topics.hbs
@@ -16,7 +16,9 @@
             Ein Klick auf das Auge <i class="fa fa-eye"></i> macht das Thema für Schüler*innen sichtbar oder unsichtbar.
           </div>
           <div>
-            Du kannst dein Thema jederzeit bearbeiten <i class="fa fa-pencil"></i>, umsortieren <i class="fa fa-ellipsis-v"></i>&nbsp;<i class="fa fa-ellipsis-v"></i>, löschen <i class="fa fa-trash-o"></i> oder mit anderen {{theme.short_title}} Nutzern teilen <i class="fa fa-share-alt"></i>.
+            Du kannst dein Thema jederzeit bearbeiten <i class="fa fa-pencil"></i>, umsortieren <i class="fa fa-ellipsis-v"></i>&nbsp;<i class="fa fa-ellipsis-v"></i>, löschen <i class="fa fa-trash-o"></i> oder teilen <i class="fa fa-share-alt"></i>.
+          </div>
+          <div>
             Ein Klick auf das Thema bringt dich in die Vorschau-Ansicht.
           </div>
         </div>
