--- a/views/courses/edit-course.hbs
+++ b/views/courses/edit-course.hbs
@@ -33,6 +33,11 @@
                 </div>
 
                 <div class="form-group">
+                    <label>Beschreibung des Kurses</label>
+                    <textarea class="form-control" name="description">{{{stripOnlyScript course.description}}}</textarea>
+                </div>
+
+                <div class="form-group">
                   <label>Farbe des Kurses:</label>
                   <div class="color-picker">
                     {{#if course.color}}
