added extra button, changed label

--- a/views/courses/create-course.hbs
+++ b/views/courses/create-course.hbs
@@ -39,7 +39,7 @@
                 Kursdaten
               </div>
               <div class="text-muted step-label">
-                Mitglieder
+                Teilnehmer
               </div>
               <div class="text-muted step-label">
                 Abschließen
@@ -248,7 +248,10 @@
                 </div>
               </div>
 
-              <a class="btn btn-primary pull-right" href="/courses/">Zur Kursübersicht</a>
+              <div class="pull-right">
+                <a class="btn btn-secondary" href="/courses/add">Einen weiteren Kurs anlegen</a>
+                <a class="btn btn-primary" href="/courses/">Zur Kursübersicht</a>
+              </div>
             </section>
 
           {{/content}}
