fix progressbar css

--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -177,6 +177,8 @@
     padding-bottom: 50px;
     .progressbar{
       margin-top: 20px;
+      margin-left: 12px;
+      margin-right: 12px;
     }
     .stages{
       padding-left: 12px;
