--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -196,7 +196,10 @@
     	.image {
     		padding: 30px;
         opacity: 0.8;
-    	}
+      }
+      .course-features{
+        margin-top: 15px;
+      }
     }
     .course-submit-page{
       max-width: 75%;
