--- a/views/courses/create-course.hbs
+++ b/views/courses/create-course.hbs
@@ -28,7 +28,7 @@
             <div class="headlines">
               <h3>{{sectionTitle}}</h3>
               <p class="text-muted subtitle">
-                In einem Kurs wird gemeinsam mit den Teilnehmern an Themen, Hausaufgaben und Dateien gearbeitet.
+                In einem Kurs wird gemeinsam mit den Teilnehmern an Themen, Aufgaben und Dateien gearbeitet.
               </p>
             </div>
           </div>
@@ -182,7 +182,7 @@
 
             <section data-panel="section-2" class="submit-page course-submit-page">
               <h4>Du hast es fast geschafft...</h4>
-              <p class="text-muted">Hier kannst du Klassen oder einzelne Schüler deinem Kurs hinzufügen.<br>Dies kannst du jetzt oder später in den Kurseinstellungen machen.</p>
+              <p class="text-muted">Füge Klassen oder einzelne Schüler deinem Kurs hinzu.<br>Dies kannst du jetzt oder später in den Kurseinstellungen machen.</p>
               <div class="form-group">
                   <label>Klasse(n) (Alle Schüler der Klasse werden automatisch hinzugefügt!) - Optional</label>
 
@@ -230,21 +230,17 @@
                 </div>
                 <div>
                   <h4>Geschafft!</h4>
-                  <h5 class="text-muted">Was kann ich in einem Kurs machen?</h5>
-                  <h6>Themen anlegen</h6>
-                  <h6 class="text-muted">
-                    Themen sind in der {{theme.short_title}} die Abschnitte für deinen Unterricht.
-                  </h6>
-                  <h6>Aufgaben stellen</h6>
-                  <h6 class="text-muted">
-                    Innerhalb eines Kurses/Themas kannst du Aufgaben an deine Teilnehmer
-                    stellen.
-                  </h6>
-                  <h6>Tools hinzufügen</h6>
-                  <h6 class="text-muted">
-                    In einem Kurs kannst du außerdem Tools (z.B. GeoGebra) zum interaktiven Unterricht
-                  hinzufügen.
-                  </h6>
+                  <h5 class="text-muted">Was kannst du in einem Kurs machen?</h5>
+                  <div class="course-features">
+                    <h6>Themen anlegen</h6>
+                    <h6 class="text-muted">
+                      Lege hier die Inhalte deines Unterrichts an.
+                    </h6>
+                    <h6>Aufgaben stellen</h6>
+                    <h6 class="text-muted">
+                      Stelle deinen Kursteilnehmern Aufgaben und sieh dir ihre Abgaben an
+                    </h6>
+                  </div>
                 </div>
               </div>
 
