--- a/views/courses/create-course.hbs
+++ b/views/courses/create-course.hbs
@@ -225,8 +225,8 @@
 
             <section data-panel="section-3">
               <div class="final-step">
-                <div class="image hidden-xs-down">
-                  <img src="/images/empty-states/add_people.png"/>
+                <div class="image-wrapper hidden-xs-down">
+                  <img class="image" src="/images/empty-states/add_people.svg"/>
                 </div>
                 <div>
                   <h4>Geschafft!</h4>
