trim whitespaces course name

--- a/views/courses/create-course.hbs
+++ b/views/courses/create-course.hbs
@@ -58,7 +58,7 @@
               <div class="row">
                 <div class="form-group col-md-6">
                     <label>Name des Kurses</label>
-                    <input class="form-control" name="name" type="text" placeholder="z.B. Mathe 10a" value="{{course.name}}" autocomplete="off"
+                    <input class="form-control js-course-name-input" name="name" type="text" placeholder="z.B. Mathe 10a" value="{{course.name}}" autocomplete="off"
                            required autofocus/>
                 </div>
 
