--- a/views/courses/overview.hbs
+++ b/views/courses/overview.hbs
@@ -40,8 +40,8 @@
                     <div class="row padding-top">
                         <div class="col-sm-12">
                             <div class="pull-right">
-                              <a class="btn btn-secondary btn-import-course">Kurs importieren</a>
-                              <a href="/courses/add" class="btn btn-primary btn-add">Kurs anlegen</a>
+                              <a class="btn btn-secondary btn-import-course">Importiere einen Kurs</a>
+                              <a href="/courses/add" class="btn btn-primary btn-add">Erstelle einen neuen Kurs</a>
                            </div>
                         </div>
                     </div>
