Refactor redirect after news creation and cleanup team news create

--- a/views/news/edit.hbs
+++ b/views/news/edit.hbs
@@ -28,8 +28,8 @@
                 <input type="hidden" name="context" value="{{context}}" />
             {{/if}}
 
-            {{#if targetId}}
-                <input type="hidden" name="targetId" value="{{targetId}}" />
+            {{#if contextId}}
+                <input type="hidden" name="contextId" value="{{contextId}}" />
             {{/if}}
 
             <input name="schoolId" type="hidden" data-force-value="true" value="{{currentSchool}}" />
