--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -59,7 +59,7 @@
                         Zur News-Übersicht
                     </a>
                     {{#inArray "CREATE_NEWS" permissions}}
-                        <a href="/teams/{{../_id}}/news/new?targetId={{../_id}}" class="btn btn-add btn-primary">
+                        <a href="/teams/{{../_id}}/news/new" class="btn btn-add btn-primary">
                             News anlegen
                         </a>
                     {{/inArray}}
