--- a/views/firstLogin/welcome.hbs
+++ b/views/firstLogin/welcome.hbs
@@ -3,7 +3,7 @@
         <link rel="stylesheet" href="/styles/courses/empty-state.css"/>
     {{/content}}
     {{#content "page"}}
-        <div class="empty-state">
+        <section class="empty-state">
           <img src="/images/empty-states/lehrer_klasse.png" alt="Noch keine Kurse" class="image mx-auto d-block"/>
           <div class="text-wrapper mx-auto d-block">
             <h2 class="text-center">Willkommen in der {{theme.title}}, {{currentUser.displayName}}</h2>
@@ -27,6 +27,6 @@
                 </div>
             </div>
 
-        </div>
+        </section>
     {{/content}}
 {{/extend}}
