enable notificastion view

--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -121,7 +121,7 @@
                         </div>
                     </div>
                 </li>
-                {{#if false}}
+                {{#userHasPermission "NOTIFICATION_VIEW"}}
                 <li class="nav-item notification-dropdown" data-step="4" data-intro="Hier erhälst du Benachrichtigungen.">
                     <div class="dropdown minimal-button">
                         <a class="btn btn-secondary btn-thin dropdown-toggle notification-dropdown-toggle {{#if
@@ -152,7 +152,7 @@
                         </div>
                     </div>
                 </li>
-                {{/if}}
+                {{/userHasPermission}}
                 <li class="nav-item help-drodown" data-step="5" data-intro="Dies ist der Hilfebereich für deine Fragen und Probleme.">
                     <div class="dropdown minimal-button">
                         <a class="btn btn-secondary btn-thin dropdown-toggle" title="Hilfe" data-toggle="dropdown">
