remove forum notif but keep styling css

--- a/static/styles/authentication/home.scss
+++ b/static/styles/authentication/home.scss
@@ -73,7 +73,7 @@ body {
     }
     main{
 		min-height: calc(100vh - 228px);
-		#forum {
+		#frontpage-notification-top {
 			.vcenter {
 				display: flex;
 				align-items: center;
