--- a/theme/n21/views/authentication/home.hbs
+++ b/theme/n21/views/authentication/home.hbs
@@ -29,7 +29,9 @@
                     <p>
                         <img src="/images/stecker_homepage.png" alt="Cloud Illustration #1" class="img-fluid w-100">
                     </p>
-                Weitere Informationen finden Sie an <a href="http://www.n-21.de/staticsite/staticsite.php?menuid=537&topmenu=4">dieser Stelle.</a>
+					<p>
+                        Weitere Informationen finden Sie an <a href="http://www.n-21.de/staticsite/staticsite.php?menuid=537&topmenu=4" target="_blank" rel="noopener">dieser Stelle.</a>
+                    </p>
                    
 				   <div class="jumbotron">
                         Die folgenden Schulen und Studienseminare sind unmittelbar Projekt NBC beteiligt:
