replace png with svg

--- a/views/courses/overview-empty.hbs
+++ b/views/courses/overview-empty.hbs
@@ -9,7 +9,7 @@
 
     {{#content "page"}}
         <section class="section-courses empty-state">
-            <img src="/images/empty-states/lehrer_klasse.png" alt="Noch keine Kurse" class="image mx-auto d-block"/>
+            <img src="/images/empty-states/lehrer_klasse.svg" alt="Lehrer mit Klasse" class="image mx-auto d-block"/>
             <div class="text-wrapper mx-auto d-block">
               {{#if isStudent}}
                 <h2 class="text-center">Mit der {{theme.title}} wird der Unterricht digital</h2>
