--- a/views/firstLogin/welcome.hbs
+++ b/views/firstLogin/welcome.hbs
@@ -4,7 +4,7 @@
     {{/content}}
     {{#content "page"}}
         <section class="empty-state">
-          <img src="/images/empty-states/lehrer_klasse.png" alt="Noch keine Kurse" class="image mx-auto d-block"/>
+          <img src="/images/empty-states/lehrer_klasse.svg" alt="Lehrer mit Klasse" class="image mx-auto d-block"/>
           <div class="text-wrapper mx-auto d-block">
             <h2 class="text-center">Willkommen in der {{theme.title}}, {{currentUser.displayName}}</h2>
             {{#if isStudent}}
