--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -129,27 +129,51 @@
                     </div>
                 </li>
 
+
+
                 {{#userHasPermission "NOTIFICATION_VIEW"}}
                 <li class="nav-item notification-dropdown" data-step="4"
                     data-intro="Hier erhälst du Benachrichtigungen.">
                     <div class="dropdown minimal-button">
                         <a class="btn btn-secondary btn-thin dropdown-toggle notification-dropdown-toggle {{#if
-                                        recentNotifications}}recent{{/if}}" title="Benachrichtigungen"
+                                        ../recentNotifications}}recent{{/if}}" title="Benachrichtigungen"
                             data-toggle="dropdown">
-                            <i class="fa fa-bell"></i> {{#if recentNotifications}}
-                            <span class="tag tag-primary">{{recentNotifications}}</span>{{/if}}
+                            <i class="fa fa-bell"></i> {{#if ../recentNotifications}}
+                            <span class="tag tag-primary">{{../recentNotifications}}</span>{{/if}}
                         </a>
 
                         <div class="dropdown-menu">
                             <div class="content">
-                                {{#if notifications}}
-                                {{#each notifications}}
-                                <div class="notification-item {{#unless this.read}}unread{{/unless}}"
-                                    data-notification-id="{{this.notificationId}}">
-                                    <a href="{{this.action}}"><b>{{this.title}}</b></a>
-                                    <br>
-                                    <span>{{this.body}}</span>
-                                    <time class="notification-time">{{timeFromNow this.date}}</time>
+                                {{#if ../notifications}}
+                                {{#each ../notifications}}
+                                <div class="notification-item {{#unless this.seenCallback.length}}unread{{/unless}}"
+                                    data-notification-id="{{this._id}}">
+                                    <a href="javascript:showNotificationDetails('{{this._id}}')">
+                                        <b>{{this.payload.title}}</b>
+                                    </a>
+                                    <div>{{truncate this.payload.message}}</div>
+
+                                    {{#if this.seen}}
+                                        <time class="notification-seen-time" title="Gesehen am {{timeToString this.seenDate}}"><i class="fa fa-eye" aria-hidden="true"></i></time>
+                                    {{else}}
+                                        <time class="notification-unseen">
+                                            <a href="javascript:notificationSeen('{{this.seenUrl}}');" title="Als gesehen markieren"><i class="fa fa-eye-slash" aria-hidden="true"></i></a>
+                                        </time>
+                                    {{/if}}
+
+                                    {{#if this.url}}
+                                            <a href="{{this.url}} title="Verknüpfte Seite aufrufen"><i class="fa fa-anchor" aria-hidden="true"></i></a>
+                                    {{/if}}
+
+                                    <time class="notification-time" title="Erstellt am {{timeToString this.createdAt}}"><i class="fa fa-envelope" aria-hidden="true"></i></time>
+
+                                    {{#if this.hasAuthor}}
+                                        <span class="notification-author" title="Gesendet von {{this.author}}"><i class="fa fa-person" aria-hidden="true"></i>
+                                        {{this.author}}
+                                        </span>
+                                    {{/if}} 
+                                    
+
                                 </div>
                                 {{/each}}
                                 {{else}}
@@ -259,6 +283,12 @@
     {{#content "fields"}}
     {{> "lib/forms/form-contactAdmin"}}
     {{/content}}
+    {{/embed}}
+
+    {{#embed "lib/components/modal" title="Benachrichtigung" class="notification-modal"}}
+        {{#content "body"}}
+            {{> "lib/components/modal-notification"}}
+        {{/content}}
     {{/embed}}
 
 </section>
