fix 2 things: * SC-1086: handle unknown filetypes with direct download, fixing broken click handler on unknown files, remove "Datei extern öffnen" screen/link completely * fix permanent #file-view problems, resulting in empty video player on files reload

--- a/views/files/file-viewer.hbs
+++ b/views/files/file-viewer.hbs
@@ -1,12 +1,11 @@
 <section class="file-viewer">
-    <a href="#_" class="lightbox" id="file-view" onclick="videojs('my-video').ready(function () {this.pause();});
+    <a href="#" class="lightbox" id="file-view" onclick="videojs('my-video').ready(function () {this.pause();});
                                                                       $('#link').html('');
                                                                       $('#picture').attr('src', '');
                                                                       $('#file-view').css('display','none');">
         <video id="my-video" class="video-js vjs-default-skin" onclick="videoClick(event);" autoplay controls preload="auto" data-setup="{'fluid': true}}"></video>
         <script src="/vendor/video.js"></script>
         <img id="picture">
-        <div id="link"></div>
     </a>
 </section>
 
