--- a/views/lib/components/modal-notification.hbs
+++ b/views/lib/components/modal-notification.hbs
@@ -1,14 +1,6 @@
-<div class="modal-body">
-
-	<h5 class="title">Titel</h5>
-	<p class="message">Content</p>
-
-</div>
+<div class="modal-body modal-notification"></div>
 
 <div class="modal-footer">
-	<button type="button" class="btn btn-secondary btn-close">
-		Schließen
-	</button>
-
-	<button type="submit" class="btn btn-primary btn-delete">Löschen</button>
+	<button type="submit" class="btn btn-secondary btn-delete">Löschen</button>
+	<button type="button" class="btn btn-primary btn-close">Schließen</button>
 </div>
