Hannos geforktes Update extended_footer.hbs nachgebaut, mocte Travis nicht

--- a/theme/n21/views/lib/extended_footer.hbs
+++ b/theme/n21/views/lib/extended_footer.hbs
@@ -5,6 +5,7 @@
                 <h4>Kontakt</h4>
                 <ul>
                     <li>Allgemeine Anfragen: <a href="mailto:terhaseborg@n-21.de" target:"_blank">terhaseborg@n-21.de</a></li>
+                    <li>Support Anfragen: <a href="mailto:nbc-support@netz-21.de" target:"_blank">nbc-support@netz-21.de</a></li>
                 </ul>
             </div>
             <div  class="col-md-4">        
