--- a/views/news/edit.hbs
+++ b/views/news/edit.hbs
@@ -45,7 +45,7 @@
             </div>
 
             <div class="form-group">
-                <label>Datum</label>
+                <label>automatische Veröffentlichung vorplanen (optional)</label>
                 <input class="form-control" data-datetime data-min-date="0" name="displayAt" type="text" value="{{news.displayAt}}"/>
             </div>
 
