increased truncation length of sc-card body to show full description in file overview

--- a/views/lib/components/sc-card.hbs
+++ b/views/lib/components/sc-card.hbs
@@ -48,7 +48,7 @@
         </div>
     </div>
     <div class="sc-card-body ckcontent">
-        {{truncateHTML (conflictFreeHtml this.content)}}
+        {{truncateHTML (conflictFreeHtml this.content) 200}}
     </div>
     <div class="sc-card-footer">
         <a href="{{url}}" rel="canonical">{{{link-text}}}</a>
