LDAP administrator is able to see which incomplete users won't be imported

--- a/views/administration/ldap-edit.hbs
+++ b/views/administration/ldap-edit.hbs
@@ -10,6 +10,7 @@
 Probably delete it.--}}
 <!-- dataprivacy is only used for .recap -->
 <link rel="stylesheet" href="/styles/administration/dataprivacy.css" />
+<link rel="stylesheet" href="/styles/administration/ldap.css" />
 <link rel="stylesheet" href="/styles/help/help.css" />
 {{/content}}
 
@@ -28,6 +29,11 @@ Probably delete it.--}}
                 editierbar machen, wenn Sie auf das Schloss im jeweiligen Bereichs klicken. Nach jeder Verifizierung
                 wird Ihr System aktualisiert und ersteinmal auf deaktiviert gesetzt. Vergessen Sie daher nicht die
                 Änderungen final zu speichern, wenn die Verifizierung erfolgreich war.
+            </p>
+            <p>
+                Nach der Verifizierung können Sie sich die ausgelesenen Inhalte in der Vorschau ansehen. Gestrichene
+                Inhalte werden nicht übernommen, da bei dem Nutzer der Vorname, der Nachname und/oder die E-Mail-Adresse
+                nicht im LDAP verfügbar ist.
             </p>
         </div>
     </div>
