Show system as inactive in Administration Disable creation of second LDAP

--- a/views/administration/school.hbs
+++ b/views/administration/school.hbs
@@ -100,9 +100,11 @@
                         <button type="submit" class="btn btn-primary btn-add-modal ">
                             System hinzufügen
                         </button>
+                        {{#if ldapAddable}}
                         <button type="submit" class="btn btn-primary">
-                                LDAP System hinzufügen
+                            LDAP System hinzufügen
                         </button>
+                        {{/if}}
                     </form>
                 </div>
             </div>
