add and update unread notification count on received push message

--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -721,10 +721,10 @@ footer {
       font-size: 12px;
     }
   }
-
+  .no-notification-item,
   .page-load-status > div {
     text-align: center;
-    margin: 20px 0;
+    margin: 15px 0;
     color: #999;
   }
 }
