--- a/views/lib/components/notification-list.hbs
+++ b/views/lib/components/notification-list.hbs
@@ -39,6 +39,7 @@
 {{/each}}
 {{else}}
 <div class="no-notification-item">
-	<span>Derzeit keine Benachrichtigungen</span>
+	<div>Derzeit keine Benachrichtigungen</div>
 </div>
 {{/if}}
+<div class="meta" data-unread="{{meta.unread}}" data-count="{{meta.count}}"></div>
