--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -139,7 +139,7 @@
                                         ../recentNotifications}}recent{{/if}}" title="Benachrichtigungen"
                             data-toggle="dropdown">
                             <i class="fa fa-bell"></i> {{#if ../recentNotifications}}
-                            <span class="tag tag-primary">{{../recentNotifications}}</span>{{/if}}
+                            <span class="tag tag-primary meta-unread">{{../recentNotifications}}</span>{{/if}}
                         </a>
 
                         <div class="dropdown-menu" id="recent-notification-container">
